--- a/IRKit/IRKitResources/IRNewPeripheralScene2ViewController.xib
+++ b/IRKit/IRKitResources/IRNewPeripheralScene2ViewController.xib
@@ -15,51 +15,55 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="bg_light.png" translatesAutoresizingMaskIntoConstraints="NO" id="105">
-                    <rect key="frame" x="0.0" y="115" width="320" height="165"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="sidebyside.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="57">
+                    <rect key="frame" x="0.0" y="121" width="320" height="325"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="320" id="Ag1-oZ-fgB"/>
+                        <constraint firstAttribute="height" constant="325" id="Iz5-gy-MvN"/>
+                    </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="img_device_usb.png" translatesAutoresizingMaskIntoConstraints="NO" id="7">
-                    <rect key="frame" x="60" y="208" width="200" height="72"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="tutorial_pairing.png" translatesAutoresizingMaskIntoConstraints="NO" id="57">
-                    <rect key="frame" x="60" y="284" width="200" height="200"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Put iOS device next to IRKit" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="138">
+                    <rect key="frame" x="20" y="47" width="280" height="74"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="txt_tutorial_02.png" translatesAutoresizingMaskIntoConstraints="NO" id="114">
-                    <rect key="frame" x="73" y="115" width="174" height="53"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Press Button to Pair" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="138">
-                    <rect key="frame" x="73" y="464" width="174" height="28"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="280" id="cl0-Nq-JJZ"/>
+                        <constraint firstAttribute="height" constant="74" id="pZe-68-47p"/>
+                    </constraints>
                     <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="20"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kln-H0-Byk">
+                    <rect key="frame" x="40" y="454" width="240" height="50"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="HyT-0c-7CV"/>
+                        <constraint firstAttribute="height" constant="50" id="jb2-Ir-FSX"/>
+                    </constraints>
+                    <state key="normal" title="Done">
+                        <color key="titleShadowColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="doneButtonPressed:" destination="-1" eventType="touchUpInside" id="rOD-JT-hX8"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="105" firstAttribute="leading" secondItem="74" secondAttribute="leading" id="113"/>
-                <constraint firstItem="105" firstAttribute="bottom" secondItem="7" secondAttribute="bottom" id="0qy-rv-QjG"/>
-                <constraint firstItem="138" firstAttribute="top" secondItem="57" secondAttribute="bottom" constant="-20" id="9bl-3R-50q"/>
+                <constraint firstItem="57" firstAttribute="top" secondItem="138" secondAttribute="bottom" id="8Ba-EN-nmM"/>
+                <constraint firstItem="kln-H0-Byk" firstAttribute="top" secondItem="57" secondAttribute="bottom" constant="8" symbolic="YES" id="AkH-XT-7Vk"/>
                 <constraint firstAttribute="centerX" secondItem="138" secondAttribute="centerX" id="Jyn-iF-JYg"/>
-                <constraint firstAttribute="bottom" secondItem="7" secondAttribute="bottom" constant="288" id="Ky6-S7-Nno"/>
-                <constraint firstAttribute="centerX" secondItem="7" secondAttribute="centerX" id="LHz-gI-uUh"/>
-                <constraint firstItem="57" firstAttribute="bottom" secondItem="7" secondAttribute="bottom" constant="204" id="MA4-ul-fsX"/>
                 <constraint firstAttribute="centerX" secondItem="57" secondAttribute="centerX" id="Rb0-F0-5MX"/>
-                <constraint firstAttribute="centerX" secondItem="114" secondAttribute="centerX" id="fyo-PF-2kq"/>
-                <constraint firstAttribute="centerY" secondItem="7" secondAttribute="centerY" constant="40" id="t93-zH-dct"/>
-                <constraint firstItem="7" firstAttribute="top" secondItem="114" secondAttribute="bottom" constant="40" id="yxn-W8-8xu"/>
+                <constraint firstAttribute="centerX" secondItem="kln-H0-Byk" secondAttribute="centerX" id="qu3-DC-Vvo"/>
+                <constraint firstAttribute="centerY" secondItem="57" secondAttribute="centerY" id="sDL-7X-JNV"/>
             </constraints>
+            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
-        <image name="bg_light.png" width="320" height="165"/>
-        <image name="img_device_usb.png" width="200" height="73"/>
-        <image name="tutorial_pairing.png" width="200" height="200"/>
-        <image name="txt_tutorial_02.png" width="174" height="53"/>
+        <image name="sidebyside.jpg" width="640" height="629"/>
     </resources>
 </document>
